# fhnw-interfaces

./: CMakeLists.txt  README.md  package.xml
action/: AlignToTarget.action  Calibrate.action  DynamixelHoming.action  SetBlueLight.action  TareLoadCell.action  VisualZeroing.action
msg/: ArcPath.msg  ArcPathSegment.msg  BmsStatus.msg  BoardConfig.msg  BoardInfo.msg  Channel.msg  ChannelsState.msg  DeepSamplingDrillState.msg  DeepSamplingDrillUpdate.msg  DeepSamplingStepMotorState.msg  DeepSamplingStepMotorUpdate.msg  DriveTrainState.msg  DrivetrainElevationInputControlMsg.msg  DrivetrainElevationMotorControlMsg.msg  DrivetrainElevationSensorsMsg.msg  DrivingInputControlMsg.msg  DrivingJoyInternalStateMsg.msg  DrivingMotorControlMsg.msg  DrivingMotorStatesMsg.msg  ElectromagnetSampling.msg  HomingStatus.msg  IcantBoard.msg  LocomotionInternalStateMsg.msg  MaintenanceTask.msg  MotorStates.msg  ParametersMsg.msg  Power.msg  Task.msg  TofRaw.msg  ToolInfo.msg  VarMeta.msg  VarMetaWrite.msg  VarSet.msg  VariableUpdate.msg
srv/: Demo.srv  DetectBoardObjects.srv  DynamixelHoming.srv  DynamixelJog.srv  DynamixelPing.srv  DynamixelPosition.srv  DynamixelReboot.srv  DynamixelStatus.srv  DynamixelTorque.srv  GetArcPath.srv  GetPosition.srv  ListTools.srv  MoveToJointPositions.srv  MoveToTarget.srv  SelectBoardObject.srv  SetBlocked.srv  SetButtonConfig.srv  SetPose.srv  SetPosition.srv  SetStart.srv  SetWaypoints.srv
